test/fibi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fibi
  namespace: fibi
  annotations:
    # (Optional): Annotations for the Ingress Controller
    # -- ingress class is needed when traefik is not the default
    kubernetes.io/ingress.class: traefik
    # ---
    # -- entrypoint and tls configurations
    #traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    #traefik.ingress.kubernetes.io/router.tls: "true"
    # ---
    # -- optional middlewares
    # traefik.ingress.kubernetes.io/router.middlewares:<MIDDLEWARE>@kubernetescrd
    # ---
spec:
  rules:
  #- host: <HOSTNAME> #Optional
  - http:
      paths:
      - path: /
        pathType: Prefix  #Prefix - Exact - Mixed
        backend:
          service:
            name: fibi
            port:
              number: 443
  # (Optional) TLS settings
  # tls:
  # - hosts:
  #   - <HOSTNAME> # Your hostname
  #   secretName: <SECRET>  # Your TLS Secret
  # ---
